# xiaoyaozu-tts

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent.md  brand.md  cli.md  installation.md  roadmap.md  safety.md  share.md
examples/: scripts.jsonl  scripts.txt
scripts/: install.sh
src/xiaoyao_tts/: __init__.py  asr.py  audio.py  backend.py  batch.py  cli.py  config.py  engine.py  errors.py  history.py  profiles.py  setup_models.py  text_split.py
tests/: test_profiles.py
